[package]
name = "build_tool_config"
version = "0.1.0"
authors = ["matthieusb <>"]

[dev-dependencies]
predicates = "1.0"
assert_cli = "0.6"
assert_fs = "0.10"


[dependencies]
structopt = "0.2"

xml-rs = "0.8.0"
dirs = "1.0.4"

indoc = "0.2"

config = "0.9"
lazy_static = "1.1.0"
simple-error = "0.1"